# AiBot

./: Procfile  README.md  alembic.ini  app.py  bot.py  config.py  deepseek_client.py  gemini_client.py  main.py  maya.db  models.py  openai_client.py  pyproject.toml  requirements.txt  telegram_bot.py  twilio_bot.py
migrations/: env.py
migrations/versions/: initial_migration.py
static/css/: admin.css
static/js/: admin.js
templates/admin/: dashboard.html  error.html  login.html
